themes/vivo-cornell/css/wilma.css
/* $This file is distributed under the terms of the license in /doc/license.txt$ */

@charset "UTF-8";
/* CSS Document */

/* Tell the browser to render HTML 5 elements as block */
header,
hgroup,
section,
nav,
article,
aside,
footer{
    display: block;
}
time{
    font-weight: normal;
}
html,
body {
    padding: 0;
    height: 100%; /* needed for container min-height */
    font-family: "Lucida Sans Unicode","Lucida Grande", Geneva, helvetica, sans-serif; 
    height: auto !important; /* real browsers */
    height: 100%; /* IE6: treaded as min-height*/;
    min-height: 100%; /* real browsers */
    margin: 0 auto;
}
body {
   background: #f8f7f2 url(../images/header-background.png) center 45px no-repeat; 
}
a:hover {
    text-decoration: none;
}
a {
    color: #167093;
}
em {
    font-style: italic;
}
/* h1,h2,h3,h4,h5,h6 ------>  */
h2 {
    padding: 10px 0 12px 0;
    margin: 0;
    font-size: 1.375em;
    color: #064d68;
    line-height: 1.5em;
}
h2 a {
    color: #167093; 
}
h2 a:link, 
h2 a:visited {
    text-decoration: underline; 
}
h2 a:hover, 
h2 a:active {
    text-decoration: none; 
}
h3 {
    padding: 10px 0 12px 0;
    margin: 0;
    font-size: 1.125em;
    color: #064d68; 
}
h4 {
    padding: 10px 0 12px 0;
    margin: 0;
    font-size: 1em;
    color: #064d68; 
}
h5 {
    padding: 10px 0 12px 0;
    margin: 0;
    font-size: .875em;
    color: #064d68; 
}

/* ------------------------------------------------->  */
/* CORNELL IDENTITY -------------------------------->  */
/* ------------------------------------------------->  */
#cu-identity {
    font-family: verdana, arial, helvetica, sans-serif;
    font-size: 63.125%;     /* translate 1.0em to 10px, 1.5em to 15px, etc. */
    color: #222;
    height: 45px;
    background: #68645b;
}
#cu-identity nav {
    margin: 0 auto;
    width: 970px;
    position: relative;
}
h1.cu-logo{
    margin: 0 auto;
    width: 970px;
}
h1.cu-logo a {
    border: none;
    display: block;
    width: 180px;
    height: 45px;
    background: url(../images/cu-logo.gif) no-repeat top left;
    margin-left: 15px;
}
a.cu-search {
    position: absolute;
    top: 6px; 
    right: 7px;
    width: 86px;
    padding: 3px 5px;
    font-size: 1.1em;
    color: #fff;
    text-decoration: none;
    border: none;
}
a.cu-search:hover {
    background: #444;
}

/* ------------------------------------------------->  */
/* EDITING STYLES ---------------------------------->  */
/* ------------------------------------------------->  */
input[type="text"], 
input[type="password"] {
    border: 0;
    font-size: 14px;
    padding: .5em;
    background: #fff;
    border: 1px solid #e0dfdf;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    margin-bottom: .8em;
}
input.block {
    margin-bottom: 20px;
}
label {
    margin-top: .5em;
}
.verbose-toggle,
.verbose-toggle:visited,
#showAddFormButton,
#showAddFormButton:visited,
input.submit, 
input.submit:visited,
/* the id selectors are used temporarily due to the custom jsp tags (<v:input>) 
for editing forms which require an id and do not allow a class. This will be 
removed once we refactor the editing forms to Freemarker */
input#submit, 
input#submit:visited {
    /*background: #222 url(../images/alert-overlay.png) repeat-x;*/
    display: inline-block;
    padding: 5px 18px 7px;
    color: #fff;
    text-decoration: none;
    border-radius: 4px; 
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    position: relative;
    border: 0;
    margin: 0;
    /*background-color: #749a02;*/
    background-color: #5e6363;
    color: #fff;
    font-size: 14px;
    font-weight: normal;
    line-height: 1;
    margin-right: .6em;
    margin-top: .5em;
    margin-bottom: .5em;
}
#verbose-mode .small {
    font-size: 12px;
    color: #fff;
}
#verbose-mode span {
    color: #888C8C;
}
#verbose-mode b {
    color: #595B5B;
}
#verbose-mode .verbose-off{
    background: #706a66;
}
input.delete,
input.delete:visited,
input#delete,
input#delete:visited {
    /*background: #222 url(../images/alert-overlay.png) repeat-x;*/
    display: inline-block;
    padding: 5px 18px 7px;
    color: #fff;
    text-decoration: none;
    border-radius: 4px; 
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
    position: relative;
    cursor: pointer;
    border: 0;
    margin: 0;
    background-color: #398aac;
    color: #fff;
    font-size: 14px;
    font-weight: normal;
    line-height: 1;
    margin-right: .6em;
}
.verbose-toggle:hover,
#showAddFormButton:hover,
input.submit:hover,
input#submit:hover {
    color: #fff;
    /*background-color: #b2d15a;*/
    background-color: #aaacac;
    
}
input.delete:hover,
input#delete:hover {
    color: #fff;
    background-color: #93c3d4;
}
.verbose-toggle,
.verbose-toggle:active,
#showAddFormButton:active,
input.delete:active,
input#delete:active,
input.submit:active,
input#submit:active {
    top: 1px;
}
form textarea {
    border: 1px solid #e0dfdf; 
    border-radius: 4px; 
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px; 
}
.maxWidth {
    margin-top: 20px;
    width: 100%;
}
#authorships a.remove:link,
#showAddForm a.cancel:link,
form a:link.cancel, 
form a:visited.cancel {
    text-decoration: underline;
    color: #f70;
    border-color: none;
    padding-left: 3px;
}
#authorships a.remove:hover,
#authorships a.remove:active,
#showAddForm a.cancel:hover,
#showAddForm a.cancel:active,
form a:hover.cancel, 
form a:active.cancel {
    text-decoration: none;
    color: #f70;
    background: none;
}
.validationError {
    font-weight: normal;
    color: #cc0000;
    margin-bottom: .3em;
}
p.submit {
  margin-top: 0;
  padding-top: 0;
}
.editingForm table {
    border-color: #dfe6e6;
}
.editingForm td {
    padding: 3px;
}
.editingForm .entryFormHead {
    background-color: #f1f2ee;
    border-color: #dfe6e6;
}
.editingForm .entryFormHead h2 {
    color: #5F6464;
}
/* ... */

